--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,4 +83,14 @@
         app:layout_constraintTop_toBottomOf="@+id/btnAgenda"
         app:layout_constraintVertical_bias="0.896" />
 
+    <TextView
+        android:id="@+id/array"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/btnAgenda"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAgregar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
